@@ -38,7 +38,7 @@ public:
   static unsigned int s_queries;
   static unsigned int s_outqueries;
   unsigned int d_outqueries;
-  
+  static map<string,string> s_negcache;    
 private:
   struct GetBestNSAnswer;
   int doResolveAt(set<string> nameservers, string auth, const string &qname, const QType &qtype, vector<DNSResourceRecord>&ret,
@@ -54,14 +54,14 @@ private:
   vector<string> shuffle(set<string> &nameservers);
   bool moreSpecificThan(const string& a, const string &b);
   string getA(const string &qname, int depth, set<GetBestNSAnswer>& beenthere);
-  
+
 private:
   string d_prefix;
   static bool s_log;
   bool d_cacheonly;
   bool d_nocache;
   LWRes d_lwr;
-  static map<string,string> s_negcache;
+
   struct GetBestNSAnswer
   {
     string qname;
